syntax = "proto3";

package proxie;

service Proxie {
  rpc Start(StartRequest) returns (StartResponse) {}
  rpc Stop(StopRequest) returns (StopResponse) {}
  rpc Query(QueryRequest) returns (QueryResponse) {}
  rpc ListenVpnUpdate(ListenVpnUpdateRequest) returns (stream VpnUpdate) {}
}

message StartRequest {
  map<string, string> options = 1;
}

message StartResponse {}

message StopRequest {}
message StopResponse {}

message QueryRequest {}
message QueryResponse {}

message ListenVpnUpdateRequest {}

message VpnTraffic {
  double tx_rate = 1;
  double rx_rate = 2;
  int64 tx_total = 3;
  int64 rx_total = 4;
}

message VpnUpdate {
  enum VpnConnection {
    disconnectd = 0;
    connecting = 1;
    connected = 2;
    disconnecting =3;
  }
  VpnConnection connection = 1;
  VpnTraffic traffic = 2;
}